fix overflow bug

--- a/index.css
+++ b/index.css
@@ -154,6 +154,7 @@ div::-webkit-scrollbar {
 	overflow: hidden;
 	border-radius: 8px;
 	line-height: 0;
+	z-index: 0;
 }
 
 .image * {
@@ -192,6 +193,7 @@ div::-webkit-scrollbar {
 	margin: 9px;
 	overflow: hidden;
 	border-radius: 8px;
+	z-index: 0;
 }
 
 .project img {
@@ -210,8 +212,8 @@ div::-webkit-scrollbar {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(to right, rgba(30, 30, 30, 0.9) 50%, rgba(30, 30, 30, 0) 100%);
-	transition-duration: 0.3s;
+	background: linear-gradient(to right, rgba(30, 30, 30, 0.95) 50%, rgba(30, 30, 30, 0) 100%);
+	transition-duration: 1s;
 }
 
 .project:hover div {
